// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentsPanelContainer initializes the sidebar 1`] = `
<CommentsPanel
  endpoint={[Function]}
  entryId="my-entry"
  onCommentsCountUpdate={[Function]}
/>
`;

exports[`CommentsPanelContainer makes panel hidden 1`] = `
<CommentsPanel
  endpoint={[Function]}
  entryId="my-entry"
  isVisible={false}
  onCommentsCountUpdate={[Function]}
/>
`;

exports[`CommentsPanelContainer makes panel visible 1`] = `
<CommentsPanel
  endpoint={[Function]}
  entryId="my-entry"
  isVisible={true}
  onCommentsCountUpdate={[Function]}
/>
`;
